#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSTime
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-03
2011-07-24 Andy Salnikov
- avoid unused variable warning

Tag: V00-01-02
2011-07-24 Andy Salnikov
- rhel6/gcc44 migration, added missing headers

Tag: V00-01-01
2011-05-06 Andy Salnikov
- improve doxygenated comments

Tag: V00-01-00
2011-01-31 Andy Salnikov
- Lots of changes to time class
- moved parsing/formating to separate file/namespace TimeFormat (copied
  over from LusiTime package).
- new file/namespace TimeUtils for various non-member methods, now
  contains only timegm() methods (forwarded to ::timegm() or 
  optionally implemented locally)
- many methods in Time class renamed to be more user-friendly
- many Time methods were removed to clean up interface

Tag: V00-00-02
2011-01-27 Andy Salnikov
- moved test to test directory

Tag: V00-00-01
2010-10-21 Mikhail S. Dubrovin