@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-04
+2013-01-03 Andy Salnikov
+- fix buffer overflow in Duration class
+
 Tag: V00-01-03
 2011-07-24 Andy Salnikov
 - avoid unused variable warning
